# NeteaseSpider

./: .gitignore  README.md  main.py  pyproject.toml  readmd.md  render.py  requirements.txt  to_excel.py
api_helper/: __init__.py  ncmapi.py
spider/: fetch_playlist.py
src/neteasespider/: __init__.py  __main__.py  export.py  render.py
src/neteasespider/api_helper/: __init__.py  ncmapi.py
src/neteasespider/playlists/: __main__.py
src/neteasespider/utils/: __init__.py
utils/: __init__.py
